# cope

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
benchmarks/: CMakeLists.txt  log.h  nested.cpp  simple.cpp
benchmarks/complete_immediately/: CMakeLists.txt  complete_immediately.cpp
cope/: CMakeLists.txt  Eq2UiIds.h  Price_t.cpp  Price_t.h  cope.cpp  cope.h  cope_msg.h  cope_result.h  cope_txn.h  dp.cpp  dp.h  dp_msg.h  dp_result.h  log.cpp  log.h  msvc_wall.h  stdafx.h  ttd.txt  txsellitem.cpp  txsellitem.h  txsetprice.cpp  txsetprice.h  ui_msg.h
cope/old/: cope1.cpp  cope2.cpp  cope3.cpp  cope4.cpp  dp.h  txsellitem.h  txsetprice.h
examples/: CMakeLists.txt
examples/sellitems/: CMakeLists.txt  app.h  appcontext.h  handlers.h  msvc_wall.h  sellitem_coord.h  sellitem_msg.h  sellitem_task.h  sellitem_types.h  sellitem_ui.h  sellitems.cpp  setprice_coord.h  setprice_msg.h  setprice_types.h  setprice_ui.h  ttd.txt  txsellitem.cpp  txsellitem.h  txsetprice.cpp  txsetprice.h  ui_msg.h
include/: cope_msg.h  cope_proxy.h  cope_result.h  cope_txn.h  traits.h  tuple.h
include/cope_handler/: basic.h  common.h
include/internal/: cope_log.h
ui/: CMakeLists.txt  Flag_t.h  Rect.cpp  Rect.h  UiInput.cpp  UiInput.h  UiMessage.h  UiTypes.h  UiWindow.cpp  UiWindow.h  UiWindowId.h  platform.h  ui_msg.cpp  ui_msg.h
ui/old/: UiWindow.cpp  UiWindowManager.h
